fix tests & finish operation

--- a/CountOnMe/Base.lproj/Main.storyboard
+++ b/CountOnMe/Base.lproj/Main.storyboard
@@ -193,7 +193,7 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="tappedAdditionButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="fKU-Qk-GCH"/>
+                                            <action selector="tappedDividedButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="VZn-Qw-kHy"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rju-9N-ORR">
@@ -204,7 +204,7 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="tappedSubstractionButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="JTl-Dx-aCr"/>
+                                            <action selector="tappedMultiplicationionButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="HQQ-uK-yik"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qMj-Of-bCU">
